--- a/wiki/InstallerElixir.wiki
+++ b/wiki/InstallerElixir.wiki
@@ -8,7 +8,7 @@ Actuellement, le seul environnement de développement officiellement supporté e
 
 Cette partie du tutoriel décrit le processus d'installation depuis le dernier snapshot des EFL et d'Elixir.
 
-== Dépendences ==
+== Dépendances ==
 
 Il vous faudra installer les paquets de développement des bibliothèques suivantes :
  * libjpeg
